--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
-  "homepage": "https://kassito.github.io/CalendDrunks-test/",
+  "homepage": "https://kassito.github.io/CalendDrunks-test",
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
